<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="re_pass">Re-Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="re_b">Register New Account</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="cal">CALCULATE</string>
    <string name="add_w">Add Weight</string>
    <string name="day">วันที่ชั่ง</string>
    <string name="we">น้ำหนัก (kg)</string>
    <string name="add_sleep">Add Sleep</string>
    <string name="save_sleep">Save</string>
    <string name="back_sleep">Back</string>
    <string name="back_post">Back</string>
</resources>
