<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="35dp"
            android:orientation="vertical">

    <EditText
        android:id="@+id/re_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email_icon"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="18dp" />

    <EditText
        android:id="@+id/re_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="89dp" />

    <EditText
        android:id="@+id/re_repss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/re_pass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/re_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:text="@string/re_b"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="239dp" />

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>